syntax = "proto3";
option go_package = "./kline";
import "google/protobuf/timestamp.proto";

package proto;

service KlineService {
  rpc Get (GetKlineRequest) returns (GetKlineResponse);
}

message GetKlineRequest {
  string symbol = 1;
  string interval = 2;
  google.protobuf.Timestamp startTime = 3;
  google.protobuf.Timestamp endTime = 4;
  int32 limit = 5;
}
message Kline {
  google.protobuf.Timestamp openTime = 1;
  string openPrice = 2;
  string highPrice = 3;
  string lowPrice = 4;
  string closePrice = 5;
  string volume = 6;
  google.protobuf.Timestamp closeTime = 7;
  string quoteVolume = 8;
  string takerAssets = 9;
  string takerQuote = 10;
  int32 trades = 11;
}
message GetKlineResponse {
  repeated Kline klines = 1;
}